bug: Add Polymer element libraries for proper rendering.

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,12 @@
   "author": "Dan Stormont",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.2.0"
+    "polymer": "Polymer/polymer#^1.2.0",
+    "paper-button": "PolymerElements/paper-button",
+    "paper-card": "PolymerElements/paper-card",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel",
+    "paper-header-panel": "PolymerElements/paper-header-panel",
+    "paper-icon-button": "PolymerElements/paper-icon-button",
+    "paper-toolbar": "PolymerElements/paper-toolbar"
   }
 }
